✨ feat: 备忘录更新,路由架构细微调整

--- a/备忘录.md
+++ b/备忘录.md
@@ -35,8 +35,8 @@
   - **定位**: 核心的灵感构思与故事结构设计中心。
 - **`文稿` (Manuscripts)**: `href: /manuscripts`
   - **定位**: 基于大纲进行具体章节内容创作的管理中心。
-- **`世界观` (World-building)**: `href: /worldview`
-  - **定位**: 创作所需的一切背景设定的“专属维基百科”。
+- **`设定集` (Settings)**: `href: /settings`
+  - **定位**: 创作所需的一切背景设定的"专属维基百科"，包括角色、系统、世界观等。
 - **`统计` (Analytics)**: `href: /stats`
   - **定位**: 对创作过程进行数据化复盘与分析的工具。
 
@@ -58,12 +58,100 @@
 - **状态管理**: 支持按“进行中”、“已完结”、“构思中”等状态对小说项目进行筛选和管理。
 - **章节组织**: 在每个文稿内部，提供创建、排序和管理章节的能力。
 
-### 3. `世界观` (/worldview) 模块
+### 3. `设定集` (/settings) 模块
 
-- **模板化创建**: 为“角色”、“地点”、“物品”等不同设定提供结构化的模板，引导用户填写关键信息。
-- **视图切换**:
-  - **网格视图**: 以卡片形式展示设定，突出图片和简介。
-- **子路由结构**: 采用 `worldview/characters/[id]` 这样的清晰层级，分离“主页”、“列表页”和“详情页”。
+#### 核心功能模块
+
+**角色设定** (`/settings/characters`)
+
+- **基础信息**: 姓名、年龄、性别、身份、职业
+- **外貌描述**: 相貌特征、身材体型、着装风格、标志性特征
+- **性格特点**: 性格标签、说话方式、行为习惯、价值观念
+- **背景故事**: 出身来历、成长经历、重要事件、关系网络
+- **能力设定**: 实力等级、特殊技能、武器装备、战斗风格
+
+**系统/金手指** (`/settings/systems`)
+
+- **系统类型**: 升级系统、签到系统、抽奖系统、商城系统等
+- **功能机制**: 运作规则、触发条件、限制约束
+- **等级体系**: 境界划分、升级条件、经验获取方式
+- **道具装备**: 物品分类、属性效果、获取途径
+- **数值设定**: 各种参数配置、公式计算
+
+**世界背景** (`/settings/worlds`)
+
+- **世界设定**: 时代背景、地理环境、气候条件
+- **势力组织**: 门派宗教、家族氏族、国家政权、商业组织
+- **修炼体系**: 功法分级、修炼境界、突破条件
+- **历史脉络**: 重大事件、历史人物、时间线梳理
+- **文化风俗**: 社会制度、生活方式、语言文字
+
+**辅助设定** (`/settings/misc`)
+
+- **小说标签**: 热血、爽文、系统、穿越、重生、修仙等
+- **分类管理**: 玄幻、都市、历史、科幻等类型维护
+- **灵感记录**: 零散想法、创意片段、剧情灵感
+- **参考资料**: 图片素材、文档资料、网页链接
+
+#### 核心特性
+
+**项目关联管理**
+
+- 每个设定必须关联到具体的小说项目
+- 支持小说项目选择器，快速切换查看不同项目的设定
+- 支持后期调整设定的项目关联关系
+- 提供项目设定统计概览（角色数、系统数等）
+
+**模板化创建**
+
+- 为不同设定类型提供预设模板
+- 角色模板：主角、配角、反派、路人等
+- 系统模板：升级、签到、商城、抽奖等
+- 创建时自动关联到当前选中的小说项目
+
+**智能关联系统**
+
+- **@ 引用功能**: 在大纲/正文编辑时输入 @ 触发设定搜索
+- **范围限制**: @ 搜索只显示当前项目关联的设定，避免无关干扰
+- **自动插入**: 选择设定后自动插入 `[@设定名](moge://type/id)` 格式链接
+- **双向关联**: 设定详情页显示所有引用该设定的大纲/章节位置
+
+**AI 生成增强**
+
+- 生成大纲时自动获取项目关联的所有设定作为上下文
+- 支持设定摘要注入，提升 AI 生成内容的一致性
+- 智能识别相关设定，优先使用高相关度的设定信息
+- 生成结果自动解析并建立 @ 引用关系
+
+**关系链接**
+
+- 角色间的关系图谱展示
+- 设定间的引用关系管理
+- 设定使用频次统计和热度分析
+- 项目内设定的关联度可视化
+
+**视图模式**
+
+- **项目切换栏**: 顶部显示当前项目选择器和设定统计
+- **卡片视图**: 适合浏览概览，突出图片和核心信息
+- **表格视图**: 适合数据对比，支持排序和高级筛选
+- **详情视图**: 完整信息展示，支持富文本编辑
+
+**搜索筛选**
+
+- 按类型、标签、创建时间等维度筛选
+- 全文搜索设定内容和关键词（限当前项目）
+- 收藏夹和常用设定快速访问
+- 支持跨项目设定复制和导入
+
+**数据管理**
+
+- 设定导出为 JSON/Markdown 格式
+- 支持设定模板保存和复用
+- 设定版本历史和回滚功能
+- 批量操作：标签管理、项目迁移等
+
+**子路由结构**: 采用 `settings/characters/[id]` 清晰层级，分离"主页"、"列表页"和"详情页"
 
 ### 4. `统计` (/stats) 模块
 
@@ -78,7 +166,7 @@
 
 这是打通所有模块、提升产品价值的核心系统。
 
-- **目标**: 实现 `世界观`、`大纲`、`正文` 之间的无缝链接。
+- **目标**: 实现 `设定集`、`大纲`、`正文` 之间的无缝链接。
 - **核心流程**:
   1.  **触发与插入**: 在任何编辑器中输入 `@`，触发全局设定搜索，选择后插入一个包含唯一ID的稳定链接（如 `[@风雪城](moge://item/uuid-xxx)`）。
   2.  **悬浮与跳转**: 在阅读时，鼠标悬浮于 `@链接` 上可预览设定简介卡片；点击则直接跳转至该设定的详情页。
@@ -92,15 +180,18 @@
 建议采用分阶段、迭代的方式进行开发：
 
 1.  **第一阶段 (基础建设)**:
-    - 搭建 `文稿` 和 `世界观` 模块的基础页面和路由结构。
-    - 优先实现 `世界观` 模块的模板化创建和列表/表格视图功能。
+    - 搭建 `文稿` 和 `设定集` 模块的基础页面和路由结构。
+    - 实现 `设定集` 的项目关联功能：项目选择器、设定与项目的绑定关系。
+    - 实现 `设定集` 模块的模板化创建和列表/表格视图功能。
     - 实现 `文稿` 模块的列表及状态管理。
 
 2.  **第二阶段 (核心价值)**:
-    - 实现 `@` 智能引用系统的 MVP 版本（完成搜索、插入和点击跳转）。
-    - 实现 `工作台` 的“最近项目”和“统计概览”模块。
+    - 实现 `@` 智能引用系统的 MVP 版本（项目范围内的搜索、插入和点击跳转）。
+    - 实现 AI 生成时的设定上下文注入功能。
+    - 实现 `工作台` 的"最近项目"和"统计概览"模块。
 
 3.  **第三阶段 (体验增强)**:
     - 为 `@` 系统增加悬浮预览卡片和反向链接功能。
+    - 实现设定使用统计和关联度分析。
     - 完善独立的 `统计` 页面，提供深度数据分析。
     - 完成 `工作台` 的其余模块。
