✨ feat: 大纲公共组件抽离并完善设定集样式

--- a/备忘录.md
+++ b/备忘录.md
@@ -60,9 +60,34 @@
 
 ### 3. `设定集` (/settings) 模块
 
+#### 界面架构设计
+
+**首页设计** (`/settings`)
+
+设定集首页采用两阶段界面设计：
+
+**第一阶段：小说项目选择页**
+
+- **项目卡片展示**: 以卡片形式展示所有已创建的小说项目
+- **项目信息**: 每个卡片显示小说名称、类型、创建时间、关联设定统计
+- **设定统计**: 显示各类设定数量（角色X个、系统X个、世界X个、辅助X个）
+- **新建项目**: 提供"创建新小说项目"按钮，弹窗式创建
+- **空状态处理**: 无项目时显示引导创建界面
+
+**第二阶段：设定分类页** (`/settings/[projectId]`)
+
+- **面包屑导航**: 显示 "设定集 > [项目名称]"
+- **设定分类卡片**: 4个主要分类的大卡片展示
+  - 角色设定 (`/settings/[projectId]/characters`)
+  - 系统/金手指 (`/settings/[projectId]/systems`)
+  - 世界背景 (`/settings/[projectId]/worlds`)
+  - 辅助设定 (`/settings/[projectId]/misc`)
+- **卡片内容**: 每个卡片显示该分类的设定数量和最近更新信息
+- **快捷操作**: 每个卡片提供"新建"和"查看全部"操作
+
 #### 核心功能模块
 
-**角色设定** (`/settings/characters`)
+**角色设定** (`/settings/[projectId]/characters`)
 
 - **基础信息**: 姓名、年龄、性别、身份、职业
 - **外貌描述**: 相貌特征、身材体型、着装风格、标志性特征
@@ -70,7 +95,7 @@
 - **背景故事**: 出身来历、成长经历、重要事件、关系网络
 - **能力设定**: 实力等级、特殊技能、武器装备、战斗风格
 
-**系统/金手指** (`/settings/systems`)
+**系统/金手指** (`/settings/[projectId]/systems`)
 
 - **系统类型**: 升级系统、签到系统、抽奖系统、商城系统等
 - **功能机制**: 运作规则、触发条件、限制约束
@@ -78,7 +103,7 @@
 - **道具装备**: 物品分类、属性效果、获取途径
 - **数值设定**: 各种参数配置、公式计算
 
-**世界背景** (`/settings/worlds`)
+**世界背景** (`/settings/[projectId]/worlds`)
 
 - **世界设定**: 时代背景、地理环境、气候条件
 - **势力组织**: 门派宗教、家族氏族、国家政权、商业组织
@@ -86,7 +111,7 @@
 - **历史脉络**: 重大事件、历史人物、时间线梳理
 - **文化风俗**: 社会制度、生活方式、语言文字
 
-**辅助设定** (`/settings/misc`)
+**辅助设定** (`/settings/[projectId]/misc`)
 
 - **小说标签**: 热血、爽文、系统、穿越、重生、修仙等
 - **分类管理**: 玄幻、都市、历史、科幻等类型维护
@@ -156,21 +181,20 @@
 **标签页内容布局**
 
 - **工具栏区域**: 搜索框、标签筛选、排序选择、新建按钮
-- **视图切换**: 卡片视图、列表视图、表格视图三种模式
+- **视图切换**: 卡片视图、列表视图两种模式
 - **内容展示**: 根据视图模式展示设定列表
 - **分页控件**: 支持大量设定的分页浏览
 
-**三种视图模式**
+**两种视图模式**
 
 - **卡片视图**: 网格布局，显示设定卡片，适合浏览概览
   - 桌面端 4 列，平板端 2-3 列，手机端 1 列
   - 显示名称、摘要、标签、操作菜单
+  - 支持拖拽排序和批量选择
 - **列表视图**: 紧凑列表，显示核心信息，适合快速查看
   - 头像、名称、摘要、标签、快捷操作按钮
   - 适合在有限空间内浏览大量设定
-- **表格视图**: 结构化表格，适合数据对比和批量操作
-  - 可排序的列：名称、类型、标签、创建时间
-  - 支持多选和批量操作
+  - 每行显示完整信息，操作更直观
 
 **搜索筛选功能**
 
