✨ feat: 增加设定库功能

--- a/备忘录.md
+++ b/备忘录.md
@@ -64,19 +64,21 @@
 
 **首页设计** (`/settings`)
 
-设定集首页采用两阶段界面设计：
-
-**第一阶段：小说项目选择页**
+设定集首页展示小说项目列表，支持以下功能：
 
 - **项目卡片展示**: 以卡片形式展示所有已创建的小说项目
 - **项目信息**: 每个卡片显示小说名称、类型、创建时间、关联设定统计
 - **设定统计**: 显示各类设定数量（角色X个、系统X个、世界X个、辅助X个）
+- **设定库入口**: 提供"设定库"按钮，跳转到独立设定管理页面
 - **新建项目**: 提供"创建新小说项目"按钮，弹窗式创建
+- **筛选与搜索**: 支持按类型筛选、名称搜索、时间排序
+- **视图模式**: 支持列表视图和网格视图切换
 - **空状态处理**: 无项目时显示引导创建界面
 
-**第二阶段：设定分类页** (`/settings/[projectId]`)
+**设定分类页** (`/settings/[projectId]`)
 
 - **面包屑导航**: 显示 "设定集 > [项目名称]"
+- **项目信息头部**: 显示项目详细信息和总设定数量
 - **设定分类卡片**: 4个主要分类的大卡片展示
   - 角色设定 (`/settings/[projectId]/characters`)
   - 系统/金手指 (`/settings/[projectId]/systems`)
@@ -84,6 +86,18 @@
   - 辅助设定 (`/settings/[projectId]/misc`)
 - **卡片内容**: 每个卡片显示该分类的设定数量和最近更新信息
 - **快捷操作**: 每个卡片提供"新建"和"查看全部"操作
+
+**独立设定库** (`/settings/library`)
+
+为避免强耦合，提供独立的设定管理系统：
+
+- **设定分类管理**: 支持角色、系统、世界、辅助四大类设定
+- **跨项目复用**: 设定可关联多个项目，避免重复创建
+- **筛选功能**: 支持按类型、标签、关联项目等多维度筛选
+- **搜索功能**: 支持设定名称和描述的全文搜索
+- **视图模式**: 支持列表视图和网格视图
+- **项目关联**: 显示每个设定关联的项目数量
+- **批量操作**: 支持批量编辑、删除和项目关联操作
 
 #### 核心功能模块
 
@@ -122,7 +136,9 @@
 
 **项目关联管理**
 
-- 每个设定必须关联到具体的小说项目
+- 支持双重架构：项目关联设定 + 独立设定库
+- 项目关联设定：强绑定到具体小说项目，便于项目管理
+- 独立设定库：跨项目复用，避免重复创建相似设定
 - 支持小说项目选择器，快速切换查看不同项目的设定
 - 支持后期调整设定的项目关联关系
 - 提供项目设定统计概览（角色数、系统数等）
@@ -137,7 +153,7 @@
 **智能关联系统**
 
 - **@ 引用功能**: 在大纲/正文编辑时输入 @ 触发设定搜索
-- **范围限制**: @ 搜索只显示当前项目关联的设定，避免无关干扰
+- **范围限制**: @ 搜索可选择项目关联设定或设定库
 - **自动插入**: 选择设定后自动插入 `[@设定名](moge://type/id)` 格式链接
 - **双向关联**: 设定详情页显示所有引用该设定的大纲/章节位置
 
@@ -165,7 +181,9 @@
 **搜索筛选**
 
 - 按类型、标签、创建时间等维度筛选
-- 全文搜索设定内容和关键词（限当前项目）
+- 全文搜索设定内容和关键词
+- 项目关联设定：限制当前项目范围
+- 独立设定库：支持跨项目搜索
 - 收藏夹和常用设定快速访问
 - 支持跨项目设定复制和导入
 
