✨ feat: 设定库布局重构

--- a/备忘录.md
+++ b/备忘录.md
@@ -89,11 +89,26 @@
 
 **独立设定库** (`/settings/library`)
 
-为避免强耦合，提供独立的设定管理系统：
+为避免强耦合，提供独立的设定管理系统，采用分层架构：
 
-- **设定分类管理**: 支持角色、系统、世界、辅助四大类设定
-- **跨项目复用**: 设定可关联多个项目，避免重复创建
-- **筛选功能**: 支持按类型、标签、关联项目等多维度筛选
+**设定库首页** (`/settings/library`)
+
+- **分类统计**: 展示四大设定分类的统计卡片（角色、系统、世界、辅助）
+- **数量展示**: 显示每类设定的数量和简要描述
+- **快捷入口**: 点击卡片进入对应分类的设定列表
+- **总数概览**: 显示所有设定的总数量
+
+**分类设定列表** (`/settings/library/[category]`)
+
+- `/settings/library/characters` - 角色设定列表
+- `/settings/library/systems` - 系统设定列表
+- `/settings/library/worlds` - 世界设定列表
+- `/settings/library/misc` - 辅助设定列表
+
+每个分类页面包含：
+
+- **分类标题**: 显示分类图标、名称和描述
+- **筛选功能**: 支持按标签、搜索等多维度筛选
 - **搜索功能**: 支持设定名称和描述的全文搜索
 - **视图模式**: 支持列表视图和网格视图
 - **项目关联**: 显示每个设定关联的项目数量
