--- a/备忘录.md
+++ b/备忘录.md
@@ -113,6 +113,23 @@
 - **视图模式**: 支持列表视图和网格视图
 - **项目关联**: 显示每个设定关联的项目数量
 - **批量操作**: 支持批量编辑、删除和项目关联操作
+- **新建功能**: 角色设定支持完整的创建弹框，其他分类待开发
+
+**角色设定弹框** (`CharacterDialog`)
+
+已实现完整的角色设定创建/编辑弹框，包含：
+
+- **基础信息**: 角色名称、类型、性别、年龄等必填字段
+- **外貌特征**: 身高、外貌描述、特殊标记等可选字段
+- **性格背景**: 性格特点、出身背景、职业身份等
+- **能力设定**: 实力等级、特殊能力等
+- **角色关系**: 支持添加多个关系，包含关联角色、关系类型、关系描述
+- **关联角色**: 既可选择现有角色，也可自定义输入任意角色名称，不强制关联角色表
+- **关系类型**: 分为家庭关系、社会关系、情感关系三大类，支持自定义关系类型
+- **自定义关系**: 选择"自定义..."时，显示额外输入框允许用户输入任意关系类型
+- **自定义角色**: 选择"自定义角色..."时，显示输入框允许用户输入任意角色名称
+- **标签系统**: 支持自定义标签便于分类和搜索
+- **表单验证**: 使用Zod进行完整的数据验证
 
 #### 核心功能模块
 
