--- a/备忘录.md
+++ b/备忘录.md
@@ -113,7 +113,7 @@
 - **视图模式**: 支持列表视图和网格视图
 - **项目关联**: 显示每个设定关联的项目数量
 - **批量操作**: 支持批量编辑、删除和项目关联操作
-- **新建功能**: 角色设定支持完整的创建弹框，其他分类待开发
+- **新建功能**: 角色设定和系统设定已支持完整的创建弹框，世界背景和辅助设定待开发
 
 **角色设定弹框** (`CharacterDialog`)
 
@@ -129,6 +129,23 @@
 - **自定义关系**: 选择"自定义..."时，显示额外输入框允许用户输入任意关系类型
 - **自定义角色**: 选择"自定义角色..."时，显示输入框允许用户输入任意角色名称
 - **标签系统**: 支持自定义标签便于分类和搜索
+- **表单验证**: 使用Zod进行完整的数据验证
+
+**系统设定弹框** (`SystemDialog`)
+
+已实现完整的系统/金手指设定创建/编辑弹框，包含：
+
+- **基础信息**: 系统名称、类型、描述等必填字段
+- **系统类型**: 17种预设类型（升级、签到、抽奖、商城、任务、成就、修炼、战斗、装备、技能、天赋、属性、合成、副本、公会、宠物、其他）
+- **功能模块**: 支持添加多个功能模块，每个模块包含名称、描述、运作机制、触发条件、限制约束
+- **等级体系**: 支持定义等级名称、等级描述、升级条件、等级效果
+- **道具装备**: 支持管理道具信息，包含名称、分类（9种预设分类）、描述、属性效果、获取途径
+- **数值参数**: 支持配置系统相关的数值和公式，包含参数名称、参数值、参数描述
+- **运作规则**: 系统的整体运作规则描述
+- **触发条件**: 系统激活或响应的条件设定
+- **限制约束**: 系统使用的限制和约束条件
+- **动态管理**: 所有子模块都支持动态添加、编辑、删除操作
+- **响应式设计**: 桌面端和移动端自适应布局
 - **表单验证**: 使用Zod进行完整的数据验证
 
 #### 核心功能模块
@@ -156,6 +173,54 @@
 - **修炼体系**: 功法分级、修炼境界、突破条件
 - **历史脉络**: 重大事件、历史人物、时间线梳理
 - **文化风俗**: 社会制度、生活方式、语言文字
+
+**世界设定弹框设计方案** (`WorldDialog` - 设计阶段)
+
+考虑到世界设定的复杂性和多样性，分析了四种设计方案：
+
+_方案一：分层级结构方案_
+
+- **结构**: 世界总览 → 大陆/星球 → 国家/王国 → 地区/省份 → 城市/据点
+- **优点**: 层次清晰，适合大型复杂世界观，支持多大陆多文明设定
+- **缺点**: 对简单世界观过于复杂，层级深度可能导致操作繁琐
+- **适用**: 玄幻、奇幻类大型世界观
+
+_方案二：分类模块方案_ ⭐ **推荐方案**
+
+- **结构**: 基础信息 | 地理环境 | 政治势力 | 文化体系 | 修炼/力量体系 | 历史脉络
+- **优点**: 模块化设计易于理解，适合多种题材，可选择性填写，扩展性好
+- **缺点**: 信息可能重复，某些特殊题材适配性待优化
+- **适用**: 通用性强，适合玄幻、都市、科幻、历史等各种题材
+
+_方案三：时间线导向方案_
+
+- **结构**: 远古时期 → 古代时期 → 近代时期 → 当前时代，关联空间设定
+- **优点**: 历史脉络清晰，适合历史厚重的设定，便于理解世界演变
+- **缺点**: 对现代/未来题材不够直观，填写门槛较高
+- **适用**: 历史、架空历史、有深厚背景的玄幻题材
+
+_方案四：势力中心方案_
+
+- **结构**: 主要势力 → 中立区域 → 跨势力设定，以势力为核心展开
+- **优点**: 适合势力斗争主线，便于管理复杂势力关系，符合网文常见模式
+- **缺点**: 可能忽略自然环境，对个人冒险类故事不够适用
+- **适用**: 修仙、武侠、权谋类小说
+
+**推荐实现**: 采用方案二（分类模块方案）作为主体架构，原因：
+
+1. 通用性强，适合各种题材
+2. 模块化结构，新手易上手
+3. 灵活性高，支持选择性填写
+4. 扩展性好，可根据需求增加模块
+
+具体模块设计：
+
+- **基础信息**: 世界名称、类型、时代背景、整体描述
+- **地理环境**: 地形地貌、气候条件、重要地点、地理图谱
+- **政治势力**: 国家政权、门派宗教、家族氏族、商业组织、势力关系
+- **文化体系**: 社会制度、生活方式、语言文字、宗教信仰、节日习俗
+- **修炼/力量体系**: 功法分级、修炼境界、突破条件、修炼资源、战力评估
+- **历史脉络**: 重大事件、关键节点、历史人物、传说故事、时间线管理
 
 **辅助设定** (`/settings/[projectId]/misc`)
 
