✨ feat: 增加辅助设定弹框

--- a/备忘录.md
+++ b/备忘录.md
@@ -37,6 +37,8 @@
   - **定位**: 基于大纲进行具体章节内容创作的管理中心。
 - **`设定集` (Settings)**: `href: /settings`
   - **定位**: 创作所需的一切背景设定的"专属维基百科"，包括角色、系统、世界观等。
+- **`字典管理` (Dictionary)**: `href: /dictionary`
+  - **定位**: 全局数据字典和基础配置管理中心，维护系统级的标准化数据。
 - **`统计` (Analytics)**: `href: /stats`
   - **定位**: 对创作过程进行数据化复盘与分析的工具。
 
@@ -238,12 +240,33 @@ _方案四：势力中心方案_
 - **修炼/力量体系**: 功法分级、修炼境界、突破条件、修炼资源、战力评估
 - **历史脉络**: 重大事件、关键节点、历史人物、传说故事、时间线管理
 
+**辅助设定弹框** (`MiscDialog` - ✅ 已完成)
+
+已实现完整的辅助设定创建/编辑弹框，基于创作工具集方案，包含：
+
+- **基础信息**: 辅助设定名称、类型、描述等必填字段
+- **辅助设定类型**: 7种预设类型（创作工具集、灵感收集、参考资料库、术语词典、模板库、项目笔记、其他类型）
+- **灵感记录**: 支持添加多个灵感记录，包含标题、类型（9种预设）、内容、来源、优先级、状态、相关章节
+- **参考资料**: 支持管理参考资料，包含标题、类型（9种预设）、链接地址、文件路径、描述、标签、来源
+- **创作笔记**: 支持添加创作笔记，包含标题、类型（8种预设）、内容、相关章节、重要程度、最后修改时间
+- **专业术语**: 支持术语管理，包含术语名称、分类（11种预设）、术语解释、发音读音、使用场景、使用示例、相关术语
+- **模板库**: 支持模板管理，包含模板名称、类型（8种预设）、模板内容、描述、可变参数说明、标签、使用次数
+- **项目标签**: 支持标签管理，包含标签名称、分类（9种预设）、描述、标签颜色、关联内容、使用次数
+- **动态管理**: 所有子模块都支持动态添加、编辑、删除操作
+- **响应式设计**: 桌面端和移动端自适应布局
+- **表单验证**: 使用Zod进行完整的数据验证
+- **集成完成**: 已集成到设定库辅助设定分类页面
+
 **辅助设定** (`/settings/[projectId]/misc`)
 
-- **小说标签**: 热血、爽文、系统、穿越、重生、修仙等
-- **分类管理**: 玄幻、都市、历史、科幻等类型维护
-- **灵感记录**: 零散想法、创意片段、剧情灵感
-- **参考资料**: 图片素材、文档资料、网页链接
+采用创作工具集方案，提供创作过程中的实用工具：
+
+- **灵感记录**: 零散想法、创意片段、剧情灵感、梗概草稿
+- **参考资料**: 图片素材、文档资料、网页链接、音频视频
+- **创作笔记**: 章节大纲草稿、人物关系图、情节线索
+- **专业术语**: 行业黑话、专业词汇、技能名称、道具名称
+- **模板库**: 常用桥段、剧情模板、对话模板
+- **项目标签**: 自定义项目相关的标签分类
 
 #### 核心特性
 
@@ -347,7 +370,67 @@ _方案四：势力中心方案_
 
 **子路由结构**: 采用 `settings/characters/[id]` 清晰层级，分离"主页"、"列表页"和"详情页"
 
-### 4. `统计` (/stats) 模块
+### 5. `字典管理` (/dictionary) 模块
+
+作为全局数据字典管理中心，维护系统级的标准化数据：
+
+#### 核心功能模块
+
+**小说类型管理** (`/dictionary/genres`)
+
+- **预设类型**: 玄幻、都市、历史、科幻、军事、游戏、体育、现实、悬疑、轻小说等
+- **自定义类型**: 支持用户添加个性化小说类型
+- **类型描述**: 为每个类型提供详细说明和特点描述
+- **使用统计**: 显示各类型的使用频次和流行趋势
+
+**小说标签库** (`/dictionary/tags`)
+
+- **分类管理**: 按照不同维度分类管理标签
+  - 题材标签：修仙、穿越、重生、系统、异能、末世等
+  - 风格标签：热血、爽文、虐文、轻松、搞笑、治愈等
+  - 情节标签：复仇、成长、争霸、探险、恋爱、商战等
+  - 角色标签：废材流、天才流、老怪流、女强、男强等
+- **标签关联**: 建立标签间的关联关系和推荐组合
+- **热度排行**: 显示标签使用频次和流行趋势
+- **智能推荐**: 基于项目类型推荐合适的标签组合
+
+**系统预设管理** (`/dictionary/presets`)
+
+- **角色模板**: 主角、配角、反派等角色模板预设
+- **系统模板**: 各类金手指系统的标准模板
+- **世界模板**: 不同题材的世界观模板
+- **情节模板**: 常见剧情桥段和故事结构模板
+
+**通用词汇库** (`/dictionary/vocabulary`)
+
+- **专业术语**: 各行业专业词汇、技术名词
+- **古风词汇**: 古代官职、建筑、服饰、礼仪用词
+- **现代词汇**: 网络用语、流行词汇、行业黑话
+- **外语词汇**: 常用外语词汇及音译对照
+
+#### 核心特性
+
+**分级权限管理**
+
+- **系统级**: 平台预设的标准数据，只有管理员可修改
+- **用户级**: 用户自定义的个人词汇和标签
+- **项目级**: 特定项目的专属术语和标签
+
+**数据同步与共享**
+
+- **导入导出**: 支持批量导入/导出字典数据
+- **社区共享**: 优质用户字典可以分享给其他用户
+- **版本控制**: 字典数据的版本管理和回滚功能
+- **自动更新**: 系统级字典的自动更新机制
+
+**智能辅助功能**
+
+- **自动补全**: 在创作过程中提供智能词汇补全
+- **语义检查**: 检测用词的准确性和一致性
+- **关联推荐**: 基于上下文推荐相关词汇和标签
+- **使用统计**: 个人词汇使用习惯分析
+
+### 6. `统计` (/stats) 模块
 
 - **深度分析**: 提供独立、强大的数据分析功能。
 - **功能**: 支持按时间范围（本周、本月、本年）查看详细的字数趋势图、项目贡献度分析、写作活跃时间分布等。
@@ -355,6 +438,21 @@ _方案四：势力中心方案_
 ---
 
 ## 第四部分：全局核心系统规划
+
+### 字典管理与设定集的协同设计
+
+**数据层级关系**:
+
+- **字典管理**: 维护全局标准化数据（小说类型、通用标签、模板等）
+- **设定集**: 使用字典数据，并可扩展项目专属内容
+- **协同机制**: 设定集中的标签选择器从字典管理获取选项，支持快速添加自定义标签
+
+**典型使用流程**:
+
+1. 在字典管理中维护小说类型和标签库
+2. 创建项目时从字典中选择类型和基础标签
+3. 在设定集中创建角色/系统/世界时，标签选择器自动加载相关词汇
+4. 支持在设定创建过程中临时添加新词汇，可选择是否加入个人字典
 
 ### `@` 智能引用系统
 
