✨ feat: 更新备忘录

--- a/备忘录.md
+++ b/备忘录.md
@@ -1,10 +1,138 @@
 # 墨阁 (Moge) 功能规划备忘录
 
-本文档旨在沉淀和梳理“墨阁”应用未来的功能规划与设计思路，作为后续开发的统一参考。
+本文档旨在沉淀和梳理"墨阁"应用未来的功能规划与设计思路，作为后续开发的统一参考。
 
 ---
 
-## 第一部分：核心功能现状
+## 第一部分：AI开发规范
+
+为确保代码质量和开发一致性，制定以下AI开发规范：
+
+### 项目架构说明
+
+本项目采用 **Monorepo 架构**，统一管理多个相关包：
+
+- 📁 **apps/frontend** - Next.js前端应用，基于React 18 + TypeScript
+- 📁 **apps/backend** - NestJS后端API服务，基于Node.js + TypeScript
+- 📁 **packages/types** - 全局共享类型定义和Zod schema验证
+- 📦 **包管理器**: 使用pnpm作为唯一包管理工具
+- 🔧 **依赖管理**: 所有依赖版本通过`pnpm-workspace.yaml`统一管理
+- 📋 **版本策略**: 子项目使用`catalog:`占位符引用workspace统一版本
+
+**核心命令**：
+
+```bash
+# 根目录安装所有依赖
+pnpm install
+
+# 在特定workspace运行命令
+pnpm --filter @moge/frontend dev
+pnpm --filter @moge/backend dev
+
+# 全局命令（在根目录）
+pnpm run dev        # 启动所有服务
+pnpm run build      # 构建所有项目
+pnpm run lint       # 检查所有代码
+pnpm run typecheck  # 类型检查所有项目
+```
+
+### 核心开发规则
+
+1. **依赖管理规范**：
+   - 📦 **唯一包管理器**：必须使用pnpm，禁用npm/yarn
+   - 🏢 **Workspace统一**：所有依赖版本在`pnpm-workspace.yaml`中统一管理
+   - 🔖 **Catalog引用**：子项目package.json中使用`"dependency": "catalog:"`占位符
+   - ⚠️ **禁止直接版本**：禁止在子项目中直接指定具体版本号
+   - 🚫 **禁止重复安装**：不在子目录单独运行`pnpm install`
+
+2. **Toast通知规范**：
+   - ✅ **保留成功通知**：业务操作成功时使用 `toast.success()` 显示成功提示
+   - ❌ **删除错误通知**：所有HTTP错误由 `request/index.ts` 全局处理，业务代码不应手动添加错误toast
+   - 📝 **异常处理**：catch块中只保留 `console.error()` 用于调试，不显示用户错误提示
+
+3. **代码质量检查**：
+   - 🔧 **必须执行**：每次代码修改后在根目录执行 `pnpm run lint` 和 `pnpm run typecheck`
+   - ✅ **通过标准**：代码必须通过所有lint和类型检查，无警告无错误
+   - 🚫 **禁止提交**：有lint或类型错误的代码不得提交,不需要执行 `git` 相关操作
+
+4. **注释与文档**：
+   - 🈯 **中文注释**：所有代码注释必须使用中文，便于团队理解
+   - 📖 **注释原则**：注释应解释"为什么"而不是"是什么"
+   - 🔤 **英文保留**：仅在技术术语、API名称等必要场景保留英文
+
+5. **TypeScript类型规范**：
+   - 🚫 **禁用 as any**：严禁使用 `as any` 绕过类型检查
+   - ⚠️ **谨慎使用 unknown**：类型确实无法确定时可使用 `unknown`，但需添加类型保护
+   - ✅ **类型安全**：优先使用精确的类型定义，必要时创建新的接口或类型别名
+   - 🛡️ **类型保护**：使用类型守卫函数确保运行时类型安全
+   - 📦 **共享类型**：全局类型定义统一放在`packages/types`中
+
+6. **错误处理模式**：
+   - 🎯 **统一处理**：依赖全局错误处理机制，避免重复的错误处理逻辑
+   - 📝 **日志记录**：保留console.error用于开发调试和问题追踪
+   - 🔄 **优雅降级**：确保错误不会导致页面崩溃，提供合理的备用方案
+
+### 示例对比
+
+**❌ 错误做法**：
+
+```typescript
+// 错误的错误处理
+try {
+  await apiCall();
+} catch (error: any) {
+  toast.error('操作失败'); // 重复的错误处理
+  console.log(error); // 英文日志
+}
+```
+
+```json
+// 错误的依赖管理 - 子项目package.json
+{
+  "dependencies": {
+    "react": "^18.2.0", // ❌ 直接指定版本
+    "next": "14.0.0" // ❌ 直接指定版本
+  }
+}
+```
+
+**✅ 正确做法**：
+
+```typescript
+// 正确的错误处理
+try {
+  await apiCall();
+  toast.success('操作成功'); // 只保留成功提示
+} catch (error) {
+  console.error('操作失败:', error); // 中文日志，全局错误处理
+}
+```
+
+```json
+// 正确的依赖管理 - 子项目package.json
+{
+  "dependencies": {
+    "react": "catalog:", // ✅ 使用catalog占位符
+    "next": "catalog:" // ✅ 统一版本管理
+  }
+}
+```
+
+```yaml
+# pnpm-workspace.yaml - 统一版本管理
+packages:
+  - 'apps/*'
+  - 'packages/*'
+
+catalog:
+  react: ^18.2.0
+  next: 14.0.0
+  typescript: ^5.0.0
+```
+
+---
+
+## 第二部分：核心功能现状
 
 应用目前已具备稳定可靠的核心功能：
 
@@ -25,7 +153,7 @@
 
 ---
 
-## 第二部分：新版菜单结构
+## 第三部分：新版菜单结构
 
 为支撑未来的功能扩展，我们已确定并实施了新的侧边栏菜单结构：
 
@@ -44,7 +172,7 @@
 
 ---
 
-## 第三部分：未来功能详细规划
+## 第四部分：未来功能详细规划
 
 ### 1. `工作台` (/workspace) 模块
 
@@ -530,7 +658,7 @@ _方案四：势力中心方案_
 
 ---
 
-## 第四部分：全局核心系统规划
+## 第五部分：全局核心系统规划
 
 ### 字典管理与设定集的协同设计
 
@@ -560,7 +688,7 @@ _方案四：势力中心方案_
 
 ---
 
-## 第五部分：实施策略建议
+## 第六部分：实施策略建议
 
 建议采用分阶段、迭代的方式进行开发：
 
