✨ feat: 增加代码注释

--- a/备忘录.md
+++ b/备忘录.md
@@ -59,6 +59,10 @@ pnpm run typecheck  # 类型检查所有项目
    - 🈯 **中文注释**：所有代码注释必须使用中文，便于团队理解
    - 📖 **注释原则**：注释应解释"为什么"而不是"是什么"
    - 🔤 **英文保留**：仅在技术术语、API名称等必要场景保留英文
+   - 📝 **JSDoc标准**：公共函数、Service方法、API接口必须使用JSDoc格式
+   - 🏷️ **分层注释**：核心层用完整JSDoc，业务层用简化JSDoc，实现层用行内注释
+   - 🧠 **逻辑注释**：函数内部只有逻辑稍微复杂的地方才需要增加简单的中文注释
+   - 📋 **必备要素**：JSDoc须包含功能描述、参数说明、返回值说明、异常情况（如适用）
 
 5. **TypeScript类型规范**：
    - 🚫 **禁用 as any**：严禁使用 `as any` 绕过类型检查
