✨ feat: 删除部分无用注释

--- a/开发指南.md
+++ b/开发指南.md
@@ -58,6 +58,7 @@ pnpm run typecheck  # 类型检查所有项目
 4. **注释与文档**：
    - 🈯 **中文注释**：所有代码注释必须使用中文，便于团队理解
    - 📖 **注释原则**：注释应解释"为什么"而不是"是什么"
+   - 🚫 **避免无用注释**：禁止添加"简化版"、"直接使用XX"等无意义的状态描述注释
    - 🔤 **英文保留**：仅在技术术语、API名称等必要场景保留英文
    - 📝 **JSDoc标准**：公共函数、Service方法、API接口必须使用JSDoc格式
    - 🏷️ **分层注释**：核心层用完整JSDoc，业务层用简化JSDoc，实现层用行内注释
