✨ feat: ProjectDialog.tsx增加字段和设定库关联起来

--- a/开发指南.md
+++ b/开发指南.md
@@ -316,19 +316,35 @@ catalog:
 - **批量操作**: 支持批量编辑、删除和项目关联操作
 - **新建功能**: 角色设定和系统设定已支持完整的创建弹框，世界背景和辅助设定待开发
 
-**项目创建弹框** (`ProjectDialog` - ✅ **已完成并修复**)
+**项目创建弹框** (`ProjectDialog` - ✅ **已完成并升级**)
 
 已实现完整的项目创建/编辑弹框，包含：
 
 - **基础信息**: 项目名称、类型、描述等必填字段
 - **项目类型**: 13种预设类型（玄幻、仙侠、都市、历史、科幻、武侠、军事、游戏、竞技、悬疑、轻小说、短篇、其他）
+- **设定库关联**: ✅ **新增功能** - 支持从设定库选择关联设定
+  - 角色设定多选：从设定库角色列表中选择相关角色（最多50个）
+  - 系统设定多选：从设定库系统列表中选择相关系统（最多20个）
+  - 世界设定多选：从设定库世界列表中选择相关世界（最多10个）
+  - 辅助设定多选：从设定库辅助列表中选择相关辅助设定（最多30个）
+- **动态数据加载**: 对话框打开时自动从后端API获取最新的设定库数据
+- **多选组件**: ✅ **新增组件** - `MogeMultiSelect` 多选下拉组件
+  - 支持搜索过滤、标签展示、批量选择和清除
+  - 显示设定描述信息，便于用户选择
+  - 加载状态和空状态处理
+  - 最多显示3个选中标签，超出显示计数
 - **表单验证**: 使用Zod进行完整的数据验证
 - **性能优化**: 修复了defaultValues不稳定引用导致的无限循环问题
+- **API集成**: ✅ **新增API** - `settings.api.ts` 设定库数据接口
+  - `getSettingsLibrary()`: 并行获取四类设定数据
+  - `getSettingsByCategory()`: 按分类获取设定数据
+  - 完整的错误处理和降级机制
 - **技术实现**:
   - 使用静态常量EMPTY_DEFAULT_VALUES避免重复创建对象
   - 正确保留form依赖项，遵循React Hooks规则
   - useMemo优化字段配置数组稳定性
   - useCallback包装提交函数确保引用稳定性
+  - 支持section分组，将设定库关联字段独立分组显示
 
 **角色设定弹框** (`CharacterDialog` - ✅ **已完成并优化**)
 
@@ -351,7 +367,7 @@ catalog:
   - 函数式setState避免对当前状态值的依赖
   - 完整的中文JSDoc注释说明
 
-**代码质量与维护性提升** ✅ **已完成**
+**代码质量与维护性提升** ✅ **已完成并升级**
 
 - **中文注释规范**: 为settings目录下所有函数添加了完整的中文JSDoc注释
 - **函数文档化**: 包含功能描述、参数说明、返回值说明
@@ -359,6 +375,20 @@ catalog:
 - **类型安全**: 完整的TypeScript类型定义和验证
 - **错误处理**: 统一的错误处理机制，移除冗余的错误提示
 - **组件复用**: 使用MogeFormDialog等现有组件确保UI一致性
+- **新增组件**: ✅ **MogeMultiSelect多选组件** - 通用的多选下拉组件
+  - 支持搜索过滤、标签展示、批量选择操作
+  - 完整的加载状态、空状态和错误处理
+  - 响应式设计，桌面端和移动端自适应
+  - 符合项目UI设计规范和交互模式
+- **API架构完善**: ✅ **新增settings.api.ts** - 设定库数据接口
+  - 统一的数据获取入口，支持并行和单独请求
+  - 完整的TypeScript类型定义和接口文档
+  - 错误处理和数据降级机制
+  - 符合项目request架构规范
+- **表单组件升级**: ✅ **MogeFormDialog支持section分组**
+  - 支持字段分组显示，便于复杂表单的组织
+  - 保持向下兼容，不影响现有表单使用
+  - 完整的类型安全和性能优化
 
 **系统设定弹框** (`SystemDialog`)
 
