--- a/开发指南.md
+++ b/开发指南.md
@@ -354,7 +354,7 @@ catalog:
 已实现完整的角色设定创建/编辑弹框，包含：
 
 - **基础信息**: 角色名称、类型、性别、年龄等必填字段
-- **外貌特征**: 身高、外貌描述、特殊标记等可选字段
+- **外貌特征**: 身高、外貌描述等可选字段
 - **性格背景**: 性格特点、出身背景、职业身份等
 - **能力设定**: 实力等级、特殊能力等
 - **角色关系**: 支持添加多个关系，包含关联角色、关系类型、关系描述
@@ -363,12 +363,21 @@ catalog:
 - **自定义关系**: 选择"自定义..."时，显示额外输入框允许用户输入任意关系类型
 - **自定义角色**: 选择"自定义角色..."时，显示输入框允许用户输入任意角色名称
 - **标签系统**: 支持自定义标签便于分类和搜索
+- **备注字段**: 使用 `remarks` 字段存储额外备注信息
 - **表单验证**: 使用Zod进行完整的数据验证
+- **字段映射**: ✅ **已修复** - 前后端字段完全对齐
+  - 删除了前端不存在的 `specialMarks` 字段
+  - 统一使用数据库的 `remarks` 字段（复数形式）
+  - 所有字段与 Prisma schema 严格对应
 - **API对接**: ✅ **已完成**
   - 创建角色: 调用 `createCharacter` API，成功后显示提示并刷新列表
   - 编辑角色: 调用 `updateCharacter` API，支持修改所有字段
   - 对话框关闭时自动刷新列表数据
   - 完整的错误处理和成功提示
+- **UI交互**: ✅ **已完善**
+  - 新增按钮正常显示，点击打开创建对话框
+  - 编辑按钮正确触发编辑对话框并预填数据
+  - 删除操作带确认提示和项目关联检查
 - **性能优化**:
   - 使用useCallback包装关系管理函数确保引用稳定性
   - useMemo缓存关系渲染区域避免重复计算
@@ -432,9 +441,11 @@ catalog:
 - API需要JWT认证，请确保请求头包含有效token
 - 返回数据为空数组时，可能是数据库中没有对应用户的设定数据
 - 删除角色时，如果有项目关联该角色（projects.characters 字段包含角色ID），将返回400错误
+- ✅ **字段映射已修复**: 前端表单字段与数据库schema完全一致，删除了不存在的 `specialMarks` 字段
+- ✅ **类型安全**: 所有接口通过TypeScript严格类型检查，使用 `remarks` 字段存储备注
 - 建议先通过前端或数据库工具创建一些测试数据验证功能
 
-**前端页面完整功能** ✅ **已全部对接**
+**前端页面完整功能** ✅ **已全部对接并测试通过**
 
 角色设定列表页面 (`/settings/library/characters`) 已完成：
 
@@ -443,11 +454,12 @@ catalog:
    - 支持按分类动态切换数据
    - 完整的loading状态管理
 
-2. **创建功能**:
-   - 点击"新建角色设定"打开创建对话框
+2. **创建功能**: ✅ **已完善**
+   - 点击"新建角色设定"按钮打开创建对话框
    - 填写完整表单并保存
    - 成功后显示toast提示
    - 对话框关闭时自动刷新列表
+   - 字段验证与数据库schema完全对应
 
 3. **编辑功能**:
    - 点击卡片上的编辑按钮
@@ -461,12 +473,22 @@ catalog:
    - 成功后显示提示并刷新列表
    - 后端检查项目关联，有关联时拒绝删除
 
-5. **UI特性**:
+5. **UI特性**: ✅ **已完善**
    - 统一的卡片样式和操作按钮
    - 日期格式化显示
    - 标签动态展示
    - 支持列表/网格视图切换
    - 完整的筛选和搜索功能
+   - 新增按钮正常显示和交互
+   - 所有类型检查和lint规则通过
+
+**质量保证** ✅ **已完成**
+
+- ✅ **代码质量**: 通过所有ESLint和Prettier检查
+- ✅ **类型安全**: 通过所有TypeScript类型检查
+- ✅ **字段对齐**: 前后端字段映射完全一致
+- ✅ **错误处理**: 完善的错误提示和降级机制
+- ✅ **性能优化**: 使用React最佳实践避免不必要的重渲染
 
 **系统设定弹框** (`SystemDialog`)
 
