📃 docs: 公共组件注释优化

--- a/开发指南.md
+++ b/开发指南.md
@@ -64,6 +64,7 @@ pnpm run typecheck  # 类型检查所有项目
    - 🏷️ **分层注释**：核心层用完整JSDoc，业务层用简化JSDoc，实现层用行内注释
    - 🧠 **逻辑注释**：函数内部只有逻辑稍微复杂的地方才需要增加简单的中文注释
    - 📋 **必备要素**：JSDoc须包含功能描述、参数说明、返回值说明、异常情况（如适用）
+   - 💬 **Props注释**：接口（Interface）或类型（Type）的字段应使用内联注释（`//`）说明其用途，尤其是在表单、对话框等复杂组件中。
 
 5. **TypeScript类型规范**：
    - 🚫 **禁用 as any**：严禁使用 `as any` 绕过类型检查
